# IPZ_Office

./: .gitignore  CMakeLists.txt  README.md  clickablewidget.h  editemployeepage.cpp  editemployeepage.h  editnewspage.cpp  editnewspage.h  employee.h  employeeroles.h  employeeservice.cpp  employeeservice.h  example.cpp  homepage.cpp  homepage.h  layouthelper.cpp  layouthelper.h  loginmodal.cpp  loginmodal.h  logoutmodal.cpp  logoutmodal.h  main.cpp  mainwindow.cpp  mainwindow.h  managepage.cpp  managepage.h  newsletter.h  newsletterpage.cpp  newsletterpage.h  newsservice.cpp  newsservice.h  paginationnavigator.cpp  paginationnavigator.h  position.h  positionservice.cpp  positionservice.h  stat.h  statpage.cpp  statpage.h  statservice.cpp  (+1 more)
